# sucre

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
sucre/: __init__.py  main.py  utils.py
sucre/explorer/: base.py
sucre/ml/: functions.py  models.py  neural_network.py
sucre/preprocessor/: __init__.py  base.py  encoder.py  imputer.py  reader.py
