[project]
name = "sucre"
version = "0.1.0"
description = "A pipeline for training glucometric predictive models"
authors = [
    {name = "James Quang"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11, <3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
pytest = "^8.4.2"


[tool.poetry.scripts]
sucre = "sucre.main:app"


[tool.poetry.dependencies]
pycaret = "^3.3.2"
typer = "^0.20.0"
openpyxl = "^3.1.5"
pyyaml = "^6.0.3"
miceforest = "^6.0.5"
mlflow = "^3.5.1"
skorch = "^1.2.0"
torch = "^2.9.0"
